--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
-aiogram~=2.14
-environs~=8.0.0
+aiogram==2.14
+aiohttp==3.9.5
+aiosignal==1.3.1
+attrs==23.2.0
+Babel==2.15.0
+certifi==2024.6.2
+environs==11.0.0
+frozenlist==1.4.1
+idna==3.7
+marshmallow==3.21.3
+multidict==6.0.5
+packaging==24.1
+python-dotenv==1.0.1
+yarl==1.9.4
